@@ -2,11 +2,10 @@
 
 echo -n \#define ENV_MAGIC 0x
 find . \
-  -path '*/_*' -prune -o \
-  -path '*/.svn*' -prune -o \
-  -path '*/.#*' -prune -o \
-  -exec grep "[.]key[ ]*=" \{\} \;\
+  -path '*/_*' -prune -o\
+  -path '*/.svn*' -prune -o\
+  -path '*/.#*' -prune -o\
+  -exec grep "[.]key[ ]*=[ ]*\"" \{\} \;\
  | sed -e 's/[^"]*"\([^"]*\).*/\1/'\
- | sort | uniq | md5sum | cut -c1-4
-
-
+ | sort | uniq\
+ | md5sum | cut -c1-4
