@@ -107,7 +107,7 @@ int parse_descriptor (const char* sz, struct descriptor_d* d)
   if (!d->driver)
     return ERROR_NODRIVER;
 
-#if defined (CONFIG_DRIVER_FAT)
+#if defined (CONFIG_DRIVER_FAT) || defined (CONFIG_DRIVER_EXT2)
   if (d->driver->flags & DRIVER_DESCRIP_FS) {
     int state = 0;
     strlcpy (d->rgb, sz + ib, sizeof (d->rgb));
@@ -186,6 +186,7 @@ int parse_descriptor (const char* sz, struct descriptor_d* d)
       case '#':			/* Deprecated */
       case '+':
 	pl = &d->length;
+//	d->non_zero_length = 1;	/* Flag user's option */
 	/* Fallthrough to get ++ib */
       default:
 	++ib;
@@ -211,7 +212,7 @@ int parse_descriptor (const char* sz, struct descriptor_d* d)
     }
   }
 
-#if defined (CONFIG_DRIVER_FAT)
+#if defined (CONFIG_DRIVER_FAT) || defined (CONFIG_DRIVER_EXT2)
 		/* Make sure there is an empty field when there are /'s */
   if (d->c == 0 && d->rgb[0])
     d->pb[d->c++] = &d->rgb[ib];
